# heartbeat-watchdog

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: gpio.rs  udp.rs
examples/embassy-watchdog/: Cargo.toml
examples/embassy-watchdog/src/: main.rs
src/: io.rs  lib.rs
