[package]
name = "heartbeat-watchdog"
version = "0.2.0"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "MIT"
repository = "https://github.com/roboplc/heartbeat-watchdog"
description = "A versatile heartbeat watchdog"
readme = "README.md"
keywords = ["watchdog", "embedded", "gpio"]
autoexamples = false

[package.metadata.docs.rs]
features = ["std", "gpio"]

[package.metadata.playground]
features = ["std"]

[dependencies]
async-io = { version = "2.4.0", optional = true }
defmt = "0.3"
embassy-sync = { version = "0.6.2", optional = true }
embassy-time = { version = "0.4.0", optional = true }
gpio-cdev = { version = "0.6", optional = true }
portable-atomic = { version = "1.11" }
rtsc = { version = "0.3.15", optional = true }
thiserror = { version = "2.0", default-features = false }

[features]
default = ["std"]
gpio = ["dep:gpio-cdev"]
std = ["dep:rtsc", "dep:async-io", "thiserror/std", "portable-atomic/std"]
embassy = ["dep:embassy-time", "dep:embassy-sync"]
embassy-sync = ["dep:embassy-sync"]

[[example]]
name = "udp"
required-features = ["std"]

[[example]]
name = "gpio"
required-features = ["std", "gpio"]
